--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ services:
   - docker
 after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
-- export TAG=`if [ "$TRAVIS_BRANCH" == "main" ]; then echo "latest"; else echo $TRAVIS_BRANCH; fi`
 - export IMAGE_NAME=mamathakrishna/sample-app
-- docker build -t $IMAGE_NAME:$COMMIT .
-- docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:latest
-- docker push $IMAGE_NAME
-
+- docker build -t mamathakrishna/sample-app .
+- docker push mamathakrishna/sample-app
