--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ after_success:
 - export IMAGE_NAME=mamathakrishna/sample-app
 - docker build -t mamathakrishna/sample-app .
 - docker push mamathakrishna/sample-app
+- curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
+- chmod +x kubectl && sudo mv kubectl /usr/bin/kubectl
