--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ after_success:
 - docker push mamathakrishna/sample-app
 - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
 - chmod +x kubectl && sudo mv kubectl /usr/bin/kubectl
+- sh deploy.sh
